--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Nav from "../components/Nav.astro";
+import "../styles/global.css";
 ---
 
 <html lang="en">
@@ -10,8 +11,15 @@ import Nav from "../components/Nav.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Portfolio</title>
   </head>
-  <body class="bg-customGray-100 text-white px-20 py-12">
-    <Nav />
-    <slot />
+  <body class="bg-customGray-100 text-white px-20 py-10">
+    <img
+      src="/assets/backgrounds/bg-main-top.jpg"
+      alt="gradient background"
+      class="absolute w-fill top-0 left-0 z-0"
+    />
+    <div class="z-10 relative">
+      <Nav />
+      <slot />
+    </div>
   </body>
 </html>
