--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,31 +4,35 @@ import { Icon } from "astro-icon";
 
 <nav class="flex flex-1 justify-between">
   <a href="" class="flex justify-center items-center text-2xl font-bold gap-3"
-    ><Icon name="mdi:code-array" class="w-6 text-primary" />Francesco Alterio</a
+    >Francesco <span class="font-normal text-gray-200">Alterio</span></a
   >
-  <div
-    class="flex justify-center items-center rounded-full bg-customGray-200 p-2 gap-6"
-  >
+  <div class="flex justify-center items-center gap-6">
     <a
       href=""
-      class="text-customGray-800 font-semibold hover:bg-primaryHover rounded-full py-2 px-4"
+      class="text-customGray-800 font-semibold hover:text-primaryLight rounded-full py-2 px-4"
       >Projects</a
     >
     <a
       href=""
-      class="text-customGray-800 font-semibold hover:bg-primaryHover rounded-full py-2 px-4"
+      class="text-customGray-800 font-semibold hover:text-primaryLight rounded-full py-2 px-4"
     >
       Skills</a
     >
     <a
       href=""
-      class="text-customGray-800 font-semibold hover:bg-primaryHover rounded-full py-2 px-4"
+      class="text-customGray-800 font-semibold hover:text-primaryLight rounded-full py-2 px-4"
       >About</a
     >
   </div>
-  <div class="flex justify-center items-center gap-3">
-    <a href=""><Icon name="mdi:linkedin" class="w-7 text-primaryLight" /></a>
-    <a href=""> <Icon name="mdi:github" class="w-7 text-primaryLight" /></a>
-    <a href=""><Icon name="mdi:twitter" class="w-7 text-primaryLight" /></a>
+  <div class="flex justify-center items-center gap-10">
+    <a href="" class="flex gap-3 text-gray-300 items-center"
+      ><Icon name="mdi:linkedin" class="w-7 text-white" /> Linkedin</a
+    >
+    <a href="" class="flex gap-3 text-gray-300">
+      <Icon name="mdi:github" class="w-7 text-white" /> Github</a
+    >
+    <button class="bg-customGray-200 p-3 rounded-full">
+      <Icon name="mdi:email-outline" class="w-7 text-primaryLight" />
+    </button>
   </div>
 </nav>
