add lg-2xl responsive in header

--- a/src/components/RolPill.astro
+++ b/src/components/RolPill.astro
@@ -2,7 +2,7 @@
 ---
 
 <div
-  class="bg-primaryLight rounded-sm text-white flex gap-2 px-4 py-2 font-semibold text-lg"
+  class="bg-primaryLight rounded-sm text-white flex gap-2 px-4 py-2 font-semibold lg:text-base"
 >
   <slot />
 </div>
