ad lg-2xl responsive in header

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,7 +11,7 @@ import "../styles/global.css";
     <meta name="generator" content={Astro.generator} />
     <title>Portfolio</title>
   </head>
-  <body class="bg-customGray-300 text-white px-20 py-10">
+  <body class="text-white bg-customGray-200">
     <Nav />
     <slot />
   </body>
