--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,37 +2,42 @@
 import { Icon } from "astro-icon";
 ---
 
-<nav class="flex flex-1 justify-between">
-  <a href="" class="flex justify-center items-center text-2xl font-bold gap-3"
+<nav class="bg-customGray-200 flex flex-1 justify-between lg:px-28 pt-10">
+  <a
+    href=""
+    class="flex justify-center items-center md:text-2xl lg:text-xl xl:text-2xl font-bold gap-2"
     >Francesco <span class="font-normal text-gray-200">Alterio</span></a
   >
-  <div class="flex justify-center items-center gap-6">
+  <div class="sm:hidden lg:flex justify-center items-center gap-6">
     <a
       href=""
-      class="text-customGray-800 font-semibold hover:text-primaryLight rounded-full py-2 px-4"
+      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-light text-sm"
       >Projects</a
     >
     <a
       href=""
-      class="text-customGray-800 font-semibold hover:text-primaryLight rounded-full py-2 px-4"
+      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-light text-sm"
     >
       Skills</a
     >
     <a
       href=""
-      class="text-customGray-800 font-semibold hover:text-primaryLight rounded-full py-2 px-4"
+      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-light text-sm"
       >About</a
     >
   </div>
-  <div class="flex justify-center items-center gap-10">
-    <a href="" class="flex gap-3 text-gray-300 items-center"
-      ><Icon name="mdi:linkedin" class="w-7 text-white" /> Linkedin</a
+  <div class="sm:hidden lg:flex justify-center items-center lg:gap-8 xl:gap-10">
+    <a href="" class="flex gap-3 text-gray-300 items-center text-sm"
+      ><Icon name="mdi:linkedin" class="w-5 text-white" /> Linkedin</a
     >
-    <a href="" class="flex gap-3 text-gray-300">
-      <Icon name="mdi:github" class="w-7 text-white" /> Github</a
+    <a href="" class="flex gap-3 text-gray-300 text-sm">
+      <Icon name="mdi:github" class="w-5 text-white" /> Github</a
     >
-    <button class="bg-customGray-200 p-3 rounded-full">
-      <Icon name="mdi:email-outline" class="w-7 text-primaryLight" />
+    <button class="bg-customGray-100 p-3 rounded-full">
+      <Icon name="mdi:email-outline" class="w-5 text-primaryLight" />
     </button>
   </div>
+  <button class="lg:hidden bg-customGray-200 p-3 rounded-full">
+    <Icon name="mdi:menu-open" class="w-5 text-primaryLight" />
+  </button>
 </nav>
