--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,38 +7,36 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <header class="flex items-center mt-20">
+  <header class="bg-customGray-200 md:px-20 lg:px-28 flex items-center pt-20">
     <div class="flex flex-col gap-5 flex-1">
       <div class="flex">
         <RolPill>
-          <Icon name="mdi:web" class="w-5" />
-          Web Frontend
+          <Icon name="mdi:xml" class="w-5" />
+          Fullstack Developer
         </RolPill>
       </div>
-      <h1 class="text-7xl font-bold">Hi, my name is Francesco Alterio</h1>
+      <h1 class="lg:text-5xl xl:text-6xl 2xl:text-7xl font-bold">
+        Hi, my name is Francesco Alterio
+      </h1>
       <div class="h-2 w-16 bg-primaryLight"></div>
-      <p class="text-gray-300 text-xl">
+      <p class="text-gray-300 lg:text-lg xl:text-xl 2xl:text-2xl">
         I am a Fullstack developer currently based in Cumaná, Venezuela.
       </p>
       <div class="flex gap-2"></div>
     </div>
-    <div class="px-20 relative">
-      <div class="bg-customGray-400 rounded-full absolute w-[30rem] h-[30rem]">
-      </div>
-      <img
-        src="/assets/yo-sin-fondo.png"
-        alt=""
-        class="w-[30rem] rounded-md relative z-10"
-      />
-    </div>
+    <img
+      src="/assets/presentation.png"
+      alt=""
+      class="lg:w-[25rem] xl:w-[32rem] 2xl:w-[38rem] rounded-md relative z-10"
+    />
   </header>
-  <main class="mt-32">
-    <section>
-      <div class="flex justify-between items-center">
-        <h2 class="text-6xl font-bold">Projects</h2>
-        <PrimaryButton>View All</PrimaryButton>
-      </div>
-      <ProjectList />
-    </section>
-  </main>
 </BaseLayout>
+<main class="">
+  <section class="bg-customGray-300 lg:px-28 py-10">
+    <div class="flex justify-between items-center">
+      <h2 class="text-6xl font-bold">Projects</h2>
+      <PrimaryButton>View All</PrimaryButton>
+    </div>
+    <ProjectList />
+  </section>
+</main>
