fix nav font size

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,30 +11,30 @@ import { Icon } from "astro-icon";
   <div class="sm:hidden lg:flex justify-center items-center gap-6">
     <a
       href=""
-      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-light text-sm"
+      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-semibold"
       >Projects</a
     >
     <a
       href=""
-      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-light text-sm"
+      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-semibold"
     >
       Skills</a
     >
     <a
       href=""
-      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-light text-sm"
+      class="text-customGray-800 hover:text-primaryLight rounded-full py-2 px-4 font-semibold"
       >About</a
     >
   </div>
   <div class="sm:hidden lg:flex justify-center items-center lg:gap-8 xl:gap-10">
-    <a href="" class="flex gap-3 text-gray-300 items-center text-sm"
-      ><Icon name="mdi:linkedin" class="w-5 text-white" /> Linkedin</a
+    <a href="" class="flex gap-3 text-gray-300 items-center"
+      ><Icon name="mdi:linkedin" class="w-7 text-white" /> Linkedin</a
     >
-    <a href="" class="flex gap-3 text-gray-300 text-sm">
-      <Icon name="mdi:github" class="w-5 text-white" /> Github</a
+    <a href="" class="flex gap-3 text-gray-300">
+      <Icon name="mdi:github" class="w-7 text-white" /> Github</a
     >
     <button class="bg-customGray-100 p-3 rounded-full">
-      <Icon name="mdi:email-outline" class="w-5 text-primaryLight" />
+      <Icon name="mdi:email-outline" class="w-7 text-primaryLight" />
     </button>
   </div>
   <button class="lg:hidden bg-customGray-200 p-3 rounded-full">
