add new font-size in h1

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </RolPill>
       </div>
       <h1
-        class="text-5xl sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl 2xl:text-7xl font-bold"
+        class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl 2xl:text-7xl font-bold"
       >
         Hi, my name is Francesco Alterio
       </h1>
