fix nav padding top in mobile

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon";
 ---
 
 <nav
-  class="bg-customGray-200 flex flex-1 justify-between px-6 sm:px-12 md:px-16 lg:px-28 pt-10"
+  class="bg-customGray-200 flex flex-1 justify-between px-6 pt-6 sm:px-12 sm:pt-10 md:px-16 lg:px-28"
 >
   <a
     href=""
