add new project card and all projects to db

--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -3,7 +3,7 @@ import projects from "../../db/projects.json";
 import ProjectCard from "./ProjectCard.astro";
 ---
 
-<div class="flex justify-between gap-5">
+<div class="flex justify-between gap-x-10 gap-y-16 flex-wrap mt-10">
   {
     projects.map((project) => (
       <ProjectCard
