--- a/src/components/PrimaryButton.astro
+++ b/src/components/PrimaryButton.astro
@@ -1,6 +1,7 @@
 ---
+const { bgColor } = Astro.props;
 ---
 
-<button class="bg-primary rounded-lg px-8 py-3 text-lg font-semibold">
+<button class={`rounded-sm px-8 py-3 text-lg font-semibold bg-${bgColor}`}>
   <slot />
 </button>
