--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -11,11 +11,16 @@ const imageURL = `/assets/projects/${fileName}`;
 const firstTwoTechs = technologies.slice(0, 2);
 ---
 
-<div>
-  <img src={imageURL} alt="" />
-  <h4 class="w-full text-center">{name}</h4>
-  <div class="flex justify-center gap-1">
-    {firstTwoTechs.map((x) => <div>{x}</div>)}
+<div class="flex flex-col gap-4 flex-1 min-w-[420px] rounded-sm">
+  <img src={imageURL} alt="" class="rounded-sm" />
+  <div class="flex justify-between">
+    <h4 class="w-full text-xl">{name}</h4>
+    <div class="flex justify-center gap-1">
+      {
+        firstTwoTechs.map((x) => (
+          <div class=" bg-customGray-100 px-3 py-1 rounded-sm text-xs">{x}</div>
+        ))
+      }
+    </div>
   </div>
-  <button class="w-full text-center">More details</button>
 </div>
