--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 <main class="">
   <section class="bg-customGray-300 px-6 sm:px-12 md:px-16 lg:px-28 py-10">
     <div class="flex justify-between items-center">
-      <h2 class="text-6xl font-bold">Projects</h2>
+      <h2 class="text-4xl">My Projects</h2>
     </div>
+    <ProjectList />
   </section>
 </main>
