--- a/src/components/RolPill.astro
+++ b/src/components/RolPill.astro
@@ -1,8 +1,15 @@
 ---
+interface Props {
+  bgColor?: string;
+}
+const { bgColor } = Astro.props;
 ---
 
 <div
-  class="bg-primaryLight rounded-sm text-white flex gap-2 px-4 py-2 font-semibold text-xs sm:text-base"
+  class={`${
+    !bgColor && "bg-primaryLight"
+  } rounded-sm text-white flex gap-2 px-4 py-2 font-semibold text-xs sm:text-base`}
+  style={bgColor && "background-color:" + bgColor + ";"}
 >
   <slot />
 </div>
