project filter system, fixing prijects preview and repository

--- a/src/components/PrimaryButton.astro
+++ b/src/components/PrimaryButton.astro
@@ -2,6 +2,8 @@
 const { bgColor } = Astro.props;
 ---
 
-<button class={`rounded-sm px-8 py-3 text-lg font-semibold bg-${bgColor}`}>
+<button
+  class={`rounded-sm flex-1 px-8 py-3 text-lg font-semibold bg-${bgColor} transition-all hover:transform hover:scale-105`}
+>
   <slot />
 </button>
