--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -45,7 +45,7 @@ const shortDescription = description.split(" ").slice(0, 20).join(" ");
           .split(" ")
           .slice(0, 20)
           .join(" ")
-      }...
+      }<span class="text-primaryLight">...</span>
     </p>
     <div class="flex justify-center gap-1">
       {
@@ -57,7 +57,7 @@ const shortDescription = description.split(" ").slice(0, 20).join(" ");
       }
       {
         technologies.length > 3 && (
-          <div class=" bg-customGray-100 whitespace-nowrap px-3 py-1 rounded-sm text-xs">
+          <div class=" bg-customGray-100 whitespace-nowrap px-3 py-1 rounded-sm text-xs text-primaryLight">
             ...
           </div>
         )
