adding new pages

--- a/src/components/Skill.astro
+++ b/src/components/Skill.astro
@@ -1,16 +1,15 @@
 ---
+import { Icon } from "astro-icon";
 import { Technology } from "../types";
 
 interface Props extends Technology {}
 
 const { name, fileName, docuemntationURL } = Astro.props;
-
-const after = "";
 ---
 
 <a
   href={docuemntationURL}
-  class="block w-32 h-32 bg-customGray-300 p-5 rounded-md cursor-pointer transition-all hover:transform hover:scale-110"
+  class="block w-28 bg-customGray-200 p-5 rounded-md cursor-pointer transition-all border-primaryLight hover:transform hover:scale-110 hover:border"
 >
   <img src={`/assets/technologies/${fileName}`} alt="" class="w-full" />
 </a>
