--- a/src/components/SkillSection.astro
+++ b/src/components/SkillSection.astro
@@ -11,9 +11,17 @@ interface Props {
 const { title, skills } = Astro.props;
 ---
 
-<section class="w-full flex flex-col items-center gap-10">
-  <h3 class="text-3xl">{title}</h3>
-  <div class="flex gap-10 w-3/6 flex-wrap justify-center">
+<section
+  class="w-full bg-customGray-100 flex flex-col items-center gap-10 rounded-md p-10 flex-1"
+>
+  <div class="w-full flex justify-center">
+    <h3
+      class="lg:text-xl xl:text-2xl text-center bg-customGray-200 px-4 py-2 rounded-md"
+    >
+      {title}
+    </h3>
+  </div>
+  <div class="flex gap-10 flex-wrap justify-center">
     {
       skills.map(({ name, fileName, documentationURL }) => (
         <Skill
