--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -26,6 +26,7 @@ const filteredProjects =
           id={project.id}
           name={project.name}
           fileName={project.fileName}
+          alt={project.alt}
           technologies={project.technologies}
           description={project.description}
           projectType={project.projectType}
