--- a/src/components/RolPill.astro
+++ b/src/components/RolPill.astro
@@ -8,7 +8,7 @@ const { bgColor } = Astro.props;
 <div
   class={`${
     !bgColor && "bg-primaryLight"
-  } rounded-sm text-white flex gap-2 px-4 py-2 font-semibold text-xs sm:text-base`}
+  } rounded-sm text-white flex items-center gap-2 px-4 py-2 font-semibold text-xs sm:text-base `}
   style={bgColor && "background-color:" + bgColor + ";"}
 >
   <slot />
