--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,11 @@ import ProjectList from "../components/ProjectList.astro";
 import RolPill from "../components/RolPill.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-import Skills from "../../db/skills.json";
-import SkillSection from "../components/SkillSection.astro";
 import PrimaryAnchor from "../components/PrimaryAnchor.astro";
+import { getAllSkillsInOneArray } from "../utils/getAllSkillsInOneArray";
+import Skill from "../components/Skill.astro";
+
+const allSkills = getAllSkillsInOneArray();
 ---
 
 <BaseLayout>
@@ -41,39 +43,34 @@ import PrimaryAnchor from "../components/PrimaryAnchor.astro";
       class="lg:w-[25rem] xl:w-[32rem] 2xl:w-[38rem]"
     />
   </header>
+  <main class="">
+    <section
+      class="bg-customGray-300 px-6 sm:px-12 md:px-16 lg:px-28 py-10 flex flex-col gap-16"
+    >
+      <div class="flex justify-between items-center">
+        <h2 class="text-4xl">My Projects</h2>
+      </div>
+      <ProjectList projectFilter="isFavorite" />
+      <div class="w-full flex">
+        <PrimaryAnchor bgColor={"customGray-100"} href="/projects">
+          See all projects
+        </PrimaryAnchor>
+      </div>
+    </section>
+    <section class="px-6 sm:px-12 md:px-16 lg:px-28 py-10 flex flex-col gap-10">
+      <h2 class="text-4xl my-5">Skills</h2>
+      <div class="flex flex-wrap gap-10 justify-center">
+        {
+          allSkills.map(({ name, fileName, documentationURL, type }) => (
+            <Skill
+              name={name}
+              fileName={fileName}
+              documentationURL={documentationURL}
+              type={type}
+            />
+          ))
+        }
+      </div>
+    </section>
+  </main>
 </BaseLayout>
-<main class="">
-  <section
-    class="bg-customGray-300 px-6 sm:px-12 md:px-16 lg:px-28 py-10 flex flex-col gap-16"
-  >
-    <div class="flex justify-between items-center">
-      <h2 class="text-4xl">My Projects</h2>
-    </div>
-    <ProjectList projectFilter="isFavorite" />
-    <div class="w-full flex">
-      <PrimaryAnchor bgColor={"customGray-100"} href="/projects">
-        See all projects
-      </PrimaryAnchor>
-    </div>
-  </section>
-  <section class="px-6 sm:px-12 md:px-16 lg:px-28 py-10 flex flex-col gap-10">
-    <h2 class="text-4xl">Skills</h2>
-    <div class="flex gap-16">
-      <div class="flex flex-col gap-16 flex-1">
-        <SkillSection title="Languages" skills={Skills.languages} />
-        <SkillSection
-          title="Styling and Structuring"
-          skills={Skills.stylingAndStructuring}
-        />
-        <SkillSection title="Databases" skills={Skills.databases} />
-      </div>
-      <div class="flex flex-col gap-16 flex-1">
-        <SkillSection
-          title="Frameworks and Libraries"
-          skills={Skills.frameworksAndLibraries}
-        />
-        <SkillSection title="Testing" skills={Skills.testing} />
-      </div>
-    </div>
-  </section>
-</main>
