--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,7 +1,7 @@
 ---
 interface Props {
   background: "light" | "dark";
-  className: string;
+  className?: string;
 }
 
 const { background, className } = Astro.props;
