new history text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,7 +81,7 @@ const allSkills = getAllSkillsInOneArray();
         <p class="text-2xl italic">Every dream begins with a story</p>
         <div class="flex flex-col gap-2">
           <p class="text-gray-400 text-sm leading-7">
-            Hi, my name is Francesco Alterio and I'm a Fullstack developer. I
+            My name is Francesco Alterio and I'm a Fullstack developer. I
             started in the Web programming world at the beginning of 2021 and
             since then I have created more than 20 projects with different
             technologies. When I discovered software development I found my
